--- a/.github/workflows/update-kablo.yml
+++ b/.github/workflows/update-kablo.yml
@@ -1,77 +1,63 @@
-# GitHub Actions İş Akışının Adı
-name: Tum Platformlari Guncelle
+# .github/workflows/build-playlist.yml
 
-# Bu iş akışının ne zaman çalışacağını belirleyen tetikleyiciler
+name: M3U Çalma Listesi Oluşturucu
+
+# Bu workflow'un ne zaman çalışacağını belirleyen tetikleyiciler
 on:
-  # "main" branch'ine her push yapıldığında çalıştır
-  push:
-    branches: [ main ]
-  # GitHub Actions arayüzünden manuel olarak çalıştırma imkanı sunar
+  # GitHub Actions arayüzünden manuel olarak çalıştırma imkanı tanır
   workflow_dispatch:
-  # Her 6 saatte bir otomatik çalıştır
-  schedule:
-    - cron: '0 */6 * * *'
 
-# İş akışında çalıştırılacak işler
+  # Belirli bir zamanlamaya göre otomatik çalıştırır
+  schedule:
+    # Her gün gece yarısı (UTC) çalıştırır
+    # Cron zamanlamasını https://crontab.guru/ adresinden düzenleyebilirsiniz
+    - cron: '0 0 * * *'
+
+# Workflow'da çalışacak işler (jobs)
 jobs:
-  build-and-commit:
+  build-playlist:
     # İşin çalışacağı sanal makine ortamı
     runs-on: ubuntu-latest
 
-    # İş akışına deponuza yazma izni veriyoruz
+    # Bu işin depoya yazma izni olması gerektiğini belirtir
     permissions:
       contents: write
 
     # İşin adımları
     steps:
-      # 1. Adım: Kodu sanal makineye kopyala
-      - name: Checkout repository
+      # 1. Adım: Depodaki kodları sanal makineye indirir
+      - name: Depoyu Klonla (Checkout)
         uses: actions/checkout@v4
 
-      # 2. Adım: Python ortamını kur
-      - name: Set up Python
+      # 2. Adım: Python ortamını kurar
+      - name: Python'u Kur
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.10' # İstediğiniz bir Python sürümünü belirtebilirsiniz
 
-      # 3. Adım: Gerekli kütüphaneleri yükle
-      - name: Install dependencies
+      # 3. Adım: Gerekli Python kütüphanelerini yükler
+      - name: Bağımlılıkları Yükle
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requests beautifulsoup4
 
-      # 4. Adım: Tüm scraper betiklerini sırayla çalıştır
-      # Bir betik hata verse bile diğerlerinin çalışmaya devam etmesi için "continue-on-error: true" kullanıldı.
-      - name: Run All Scraper Scripts
-        continue-on-error: true
-        run: |
-          python "${{ github.workspace }}deneme.py"
-          
-      # 5. Adım: Değişiklikleri Depoya İşle (Commit and Push)
-      - name: Commit and push if there are changes
-        run: |
-          # Betiklerin ana dizine oluşturduğu tüm .m3u dosyalarını m3u/ klasörüne taşı
-          # Bu komut dosya adlarındaki boşluk veya özel karakterlerle başa çıkabilir.
-          find . -maxdepth 1 -type f -name "*.m3u" -exec mv {} m3u/ \;
+      # 4. Adım: M3U dosyasını oluşturan ana Python betiğini çalıştırır
+      # Betiğinizin adının "main.py" olduğunu varsayıyorum. Farklıysa burayı güncelleyin.
+      - name: Betiği Çalıştır ve M3U Dosyasını Oluştur
+        run: python deneme.py
 
-          # Git için kullanıcı yapılandırması yap
+      # 5. Adım: Oluşturulan dosyayı depoya commit'ler ve push'lar
+      - name: Değişiklikleri Depoya Gönder (Commit & Push)
+        run: |
+          # Git için bot kullanıcısını yapılandır
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-          # m3u klasöründeki tüm değişiklikleri Git'e ekle
-          git add m3u/
-
-          # Eğer işlenecek bir değişiklik varsa, commit at ve push'la
-          if ! git diff --staged --quiet; then
-            git commit -m "Güncel: M3U listeleri otomatik olarak güncellendi"
-            
-            # --- ENTEGRE EDİLEN KISIM ---
-            # Push yapmadan önce uzak sunucudaki değişiklikleri çek.
-            # --rebase seçeneği, birleştirme (merge) commit'i oluşturmak yerine
-            # kendi commit'inizi en üste taşıyarak daha temiz bir tarihçe sağlar.
-            git pull --rebase
-            
-            git push
-          else
-            echo "M3U listelerinde herhangi bir değişiklik bulunamadı. Commit atılmayacak."
-          fi
+          
+          # Oluşturulan dosyayı takip listesine ekle
+          git add yelon.m3u
+          
+          # Sadece bir değişiklik varsa commit at ve boş commit'leri engelle
+          git diff --staged --quiet || git commit -m "Güncel: M3U çalma listesi otomatik olarak güncellendi"
+          
+          # Değişiklikleri ana dala (main/master) gönder
+          git push
