--- a/.github/workflows/Fullfilm.yml
+++ b/.github/workflows/Fullfilm.yml
@@ -1,8 +1,7 @@
-# .github/workflows/build-playlist.yml
-
+# İş akışının adı
 name: M3U Çalma Listesi Oluşturucu
 
-# Bu workflow'un ne zaman çalışacağını belirleyen tetikleyiciler
+# Bu iş akışının ne zaman çalışacağını belirleyen tetikleyiciler
 on:
   # GitHub Actions arayüzünden manuel olarak çalıştırma imkanı tanır
   workflow_dispatch:
@@ -12,13 +11,13 @@ on:
     # Her gün gece yarısı (UTC) çalıştırır
     - cron: '0 0 * * *'
 
-# Workflow'da çalışacak işler (jobs)
+# İş akışında çalışacak işler (jobs)
 jobs:
   build-playlist:
     # İşin çalışacağı sanal makine ortamı
     runs-on: ubuntu-latest
 
-    # Bu işin depoya yazma izni olması gerektiğini belirtir
+    # Bu işin depoya yazma izni olması gerektiğini belirtir. Bu çok önemli!
     permissions:
       contents: write
 
@@ -28,46 +27,37 @@ jobs:
       - name: Depoyu Klonla (Checkout)
         uses: actions/checkout@v4
 
-      # 2. Adım: Python ortamını kurar
+      # 2. Adım: Python 3.10 ortamını kurar
       - name: Python'u Kur
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
       # 3. Adım: Gerekli Python kütüphanelerini yükler
+      # En iyi pratik, bu bağımlılıkları bir requirements.txt dosyasına yazmaktır.
       - name: Bağımlılıkları Yükle
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
       # 4. Adım: M3U dosyasını oluşturan ana Python betiğini çalıştırır
-      # 'continue-on-error: true' sayesinde betik hata verse bile workflow durmaz.
+      # Betik hata verirse, iş akışı burada durur ve sana haber verir. Bu daha güvenlidir.
       - name: Betiği Çalıştır ve M3U Dosyasını Oluştur
-        id: build_step
         run: python deneme.py
-        continue-on-error: true
 
-      # 5. Adım: Betiğin başarılı olup olmadığını kontrol et
-      - name: Betik sonucunu kontrol et
-        if: steps.build_step.outcome == 'failure'
-        run: echo "Python betiği başarısız oldu. Dosya oluşturulmadı."
-
-      # 6. Adım: Oluşturulan dosyayı depoya commit'ler ve push'lar
-      # Sadece betik başarılı olduysa ve dosya mevcutsa çalışır.
+      # 5. Adım: Oluşturulan dosyayı depoya commit'ler ve push'lar
       - name: Değişiklikleri Depoya Gönder (Commit & Push)
-        if: steps.build_step.outcome == 'success'
         run: |
           # Git için bot kullanıcısını yapılandır
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           
-          # Sadece dosya varsa takip listesine ekle
-          if [ -f yelon.m3u ]; then
-            git add yelon.m3u
-            # Sadece bir değişiklik varsa commit at ve boş commit'leri engelle
-            git diff --staged --quiet || git commit -m "Otomatik Güncelleme: M3U çalma listesi güncellendi"
-            # Değişiklikleri ana dala (main/master) gönder
-            git push
-          else
-            echo "yelon.m3u dosyası bulunamadı. Commit atılmayacak."
-          fi
+          # Oluşturulan dosyayı takip listesine ekle
+          git add yelon.m3u
+          
+          # Eğer bir değişiklik yoksa boş commit atılmasını engelle
+          # Değişiklik varsa commit at, yoksa bu adımı sessizce geç
+          git diff --staged --quiet || git commit -m "Otomatik Güncelleme: M3U çalma listesi güncellendi"
+          
+          # Değişiklikleri ana dala (main/master) gönder
+          git push
